interpolation via erb

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to this CRM!</h1>
+<h1>Welcome to <%= @crm_app_name %></h1>
 <p>Main Menu</p>
 <ul>
 	<li><a href="/contacts">View All Contacts</a></li>
