--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
-<h1>Welcome to <%= @crm_app_name %></h1>
+<h1>Welcome to <%= @crm_app_name %></h1> <!-- Alligator tags for interpolation -->
+<h2>The current time is: <%= @time %></h2>
 <p>Main Menu</p>
 <ul>
 	<li><a href="/contacts">View All Contacts</a></li>
