added erb views/files

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,13 @@
 <p>Main Menu</p>
 <ul>
 	<li><a href="/contacts">View All Contacts</a></li>
+	<li><a href="/contacts/new">Add a new contact</a></li>
+	<li><a href="/contacts/id">View a specific contact</a></li>
+	<li><a href="/contacts/id/edit">This is where you edit a specific contact</a></li>
 	<!-- Please complete me with links to other actions-->
 
 </ul>
+
+
+
+
