--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -4,7 +4,7 @@
 
 <ul>
 <% @contacts.each do |contact| %>
-	<li><%= contact.first_name %> <%= contact.last_name %></li>
+	<li><%= contact.first_name %> <%= contact.last_name %> <%= contact.email %>     <%= contact.note %></li>
 <% end %>
 
 
