--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -3,8 +3,8 @@
 <h1>All Contacts</h1>
 
 <ul>
-<% @contacts.each do |contact| %>
-	<li><%= contact.first_name %> <%= contact.last_name %> <%= contact.email %>     <%= contact.note %></li>
+<% @@rolodex.each do |contact| %>
+	<li><%= contact.first_name %> <%= contact.last_name %> <%= contact.email %> <%= contact.note %></li>
 <% end %>
 
 
