Rolodex == class var, implemented form in add_contact.erb

--- a/views/add_contact.erb
+++ b/views/add_contact.erb
@@ -1,1 +1,9 @@
 <p>This is where you add new contacts</p>
+
+<form action= "/contacts" method="post"> 
+	<input type="text" name="first_name">
+	<input type="text" name="last_name">
+	<input type="email" name ="email">
+	<input type="text" name="email">
+	<input type="submit" name="Submit">
+</form>
