form functioning, adding contact to rolodex, and redirecting user to main contact page

--- a/views/add_contact.erb
+++ b/views/add_contact.erb
@@ -4,6 +4,6 @@
 	<input type="text" name="first_name">
 	<input type="text" name="last_name">
 	<input type="email" name ="email">
-	<input type="text" name="email">
+	<input type="text" name="note">
 	<input type="submit" name="Submit">
 </form>
