--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -3,7 +3,7 @@
 <h1>All Contacts</h1>
 
 <ul>
-<% @@rolodex.each do |contact| %>
+<% @@rolodex.contacts.each do |contact| %>
 	<li><%= contact.first_name %> <%= contact.last_name %> <%= contact.email %> <%= contact.note %></li>
 <% end %>
 
