added styling, edited layout for pages

--- a/views/add_contact.erb
+++ b/views/add_contact.erb
@@ -1,4 +1,4 @@
-<p>This is where you add new contacts</p>
+<h2>Please add a contact below: </h2>
 
 <form action= "/contacts" method="post"> 
 	<input type="text" name="first_name">
