--- a/views/index.erb
+++ b/views/index.erb
@@ -1,13 +1,12 @@
-<h1>Welcome to <%= @crm_app_name %></h1> <!-- Alligator tags for interpolation -->
+<!-- Alligator tags for interpolation -->
 <h2>The current time is: <%= @time %></h2>
 <p>Main Menu</p>
+
 <ul>
 	<li><a href="/contacts">View All Contacts</a></li>
 	<li><a href="/contacts/new">Add a new contact</a></li>
 	<li><a href="/contacts/id">View a specific contact</a></li>
 	<li><a href="/contacts/id/edit">This is where you edit a specific contact</a></li>
-
-
 </ul>
 
 
