fixed stylesheet href

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
 
 	<head>
 		<title>A Special CRM app</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="<%= url("/style.css")%>">
 	</head>
 
 	<header>
