--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,9 @@
 	<head>
 		<title>A Special CRM app</title>
 		<link rel="stylesheet" type="text/css" href="<%= url("/style.css")%>">
+		<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+	
 	</head>
 
 	<header>
