--- a/views/add_contact.erb
+++ b/views/add_contact.erb
@@ -2,18 +2,14 @@
 
 <div id="container">
 
-<form action= "/contacts" method="post" class="pure-form"> 
-	<fieldset class="pure-group">
-		<input type="text" name="first_name" class="pure-input-1-2" placeholder="First Name">
-		<input type="text" name="last_name" class="pure-input-1-2" placeholder="Last Name">
-		<input type="email" name ="email" class="pure-input-1-2" placeholder="Email">
-	</fieldset>
+<form action= "/contacts" method="post" > 
+		<input type="text" name="first_name" placeholder="First Name">
+		<input type="text" name="last_name"  placeholder="Last Name">
+		<input type="email" name ="email"  placeholder="Email">
+		<input type="text" name="note" placeholder="Note">
 
-	<fieldset class ="pure-group">
-		<input type="text" name="note" class="pure-input-1-2" placeholder="Note">
-	</fieldset>
 
-	<button type="submit" class="pure-button pure-input-1-2 pure-button-primary">Submit</button>
+	<button type="submit">Submit</button>
 
 	</form>
 </div>
