--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,9 +1,8 @@
 <h2>All Contacts</h2>
 
-<ul>
+<ul id="contactlist">
 <% @@rolodex.contacts.each do |contact| %>
 	<li><%= contact.first_name %> <%= contact.last_name %> <%= contact.email %> <%= contact.note %></li>
 <% end %>
-
 
 </ul>
