--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -2,7 +2,9 @@
 
 <ul id="contactlist">
 <% @@rolodex.contacts.each do |contact| %>
-	<li><%= contact.first_name %> <%= contact.last_name %> <%= contact.email %> <%= contact.note %></li>
+	<div id="contactcards">
+		<li><%= contact.first_name %> <%= contact.last_name %> <hr> <%= contact.email %> <br> Note: <%= contact.note %> <br> ID: <%= contact.id %></li>
+	</div>
 <% end %>
 
 </ul>
