--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,6 +12,7 @@
 			<h1>Welcome to <%= @@crm_app_name %></h1> 
 			<nav>
 				<a href="/contacts/new">Add Contact</a>
+				<a href="/contacts">View Contacts</a>
 				<a href="/contacts/:id"> Search</a>
 				<a href="/contacts/:id/edit">Edit Contact</a>
 				<a href="http://www.zfisch.com" class="">Exit</a>
