--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,8 +3,9 @@
 
 	<head>
 		<title>A Special CRM app</title>
-		<link rel="stylesheet" type="text/css" href="<%= url("/style.css")%>">
-		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+		<link rel="stylesheet" type="text/css" href="/style.css">
+		
+		<link rel="shortcut icon" href="/favicon.ico">
 	
 	</head>
 
