--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,9 +2,8 @@
 <html>
 
 	<head>
-		<title>A Special CRM app</title>
+		<title>Rolo</title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
-		
 		<link rel="shortcut icon" href="/favicon.ico">
 	
 	</head>
@@ -14,9 +13,8 @@
 			<nav>
 				<a href="/contacts/new">Add Contact</a>
 				<a href="/contacts">View Contacts</a>
-				<a href="/contacts/:id"> Search</a>
 				<a href="/contacts/:id/edit">Edit Contact</a>
-				<a href="http://www.zfisch.com" class="">Exit</a>
+				<a href="http://www.zfisch.com">Exit</a>
 			</nav>
 	</header>
 
