--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,1 +1,7 @@
-<%= @display_contact.first_name %> <%= @display_contact.last_name %> <%= @display_contact.email %> <%= @display_contact.note %>
+<h2> Your specified contact: </h2>
+
+<ul>
+	<div id="contact_center">
+			<li><%= @display_contact.first_name %> <%= @display_contact.last_name %> <hr> <%= @display_contact.email %> <br> Note: <%= @display_contact.note %> <br> ID: <%= @display_contact.id %></li>
+	</div>
+</ul>
