--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,6 @@ body {
 }
 
 header {
-	height: 70px;
 	width: 100%;
 	background-color: slategray;
 	opacity: .7;
@@ -20,24 +19,22 @@ h1 {
 	opacity: .7;
 	padding-left: .5em;
 	margin: 0 auto;
-	margin-left: -13px;
 	text-align: center;
-	min-width: 600px;
 }
 
 h2 {
 	text-align: center;
 	color: black;
 	opacity: .5;
-	min-width: 600px;
+	min-width: 60px;
 }
 
 nav {
 	text-align: center;
 	margin-top: 10px;
+	padding: 10px 0;
 	border-top: 2px solid black;
 	border-bottom: 2px solid black;
-	min-width: 600px;
 }
 
 nav > a {
@@ -65,7 +62,7 @@ button:hover {
 }
 
 input:focus, button:focus{
-	border: 2px solid blue;
+	border: 4px solid lightblue;
 }
 
 input:hover, button:hover {
@@ -75,7 +72,6 @@ input:hover, button:hover {
 #container {
 	width: 500px;
 	margin: auto;
-	min-width: 600px;
 }
 
 a {
@@ -93,15 +89,19 @@ a:hover {
 
 /* Start of List Contacts */
 
+.contacts-list {
+	text-align: center;
+}
+
 .contactcards {
-	width: 200px;
+	min-width: 200px;
+	width: 24%;
 	height: 100px;
 	background-color: slategray;
 	display: inline-block;
 	margin-top: 30px;
 	text-align: center;
 	opacity: .7;
-	margin-left: 30px;
 	list-style-type: none;
 	color: white;
 }
@@ -110,19 +110,31 @@ a:hover {
 
 /* Start display indvidiual contact */
 
-#contact_center {
+#contact-center {
+	text-align: center;
+}
+
+#contact-center li {
+	display: inline-block;
 	width: 200px;
 	height: 100px;
 	background-color: slategray;
-	display: inline-block;
 	margin-top: 30px;
-	text-align: center;
-	margin-left: 40%;
 	list-style-type: none;
 	min-width: 60px;
 	color: white;
 	opacity: .7;
+	padding: 0;
 }
 
+ul {
+	-webkit-padding-start: 0;
+	-webkit-margin-after: 0em;
+}
+
+label {
+	vertical-align: middle;
+
+}
 
 
