Added conditional branching for id search, 404 if ID not found

--- a/public/style.css
+++ b/public/style.css
@@ -58,7 +58,6 @@ input, button {
 button:hover {
 	opacity: .7;
 	background-color: #ecf0f1;
-
 }
 
 input:focus, button:focus{
@@ -84,6 +83,11 @@ a {
 a:hover {
 		color: black;
 }
+
+#add_contact {
+	margin-top: 40px;
+}
+
 /* End of add Contact */
 
 
@@ -116,12 +120,12 @@ a:hover {
 
 #contact-center li {
 	display: inline-block;
-	width: 200px;
+	width: 24%;
 	height: 100px;
 	background-color: slategray;
 	margin-top: 30px;
 	list-style-type: none;
-	min-width: 60px;
+	min-width: 200px;
 	color: white;
 	opacity: .7;
 	padding: 0;
@@ -130,11 +134,6 @@ a:hover {
 ul {
 	-webkit-padding-start: 0;
 	-webkit-margin-after: 0em;
-}
-
-label {
-	vertical-align: middle;
-
 }
 
 
