--- a/views/add_contact.erb
+++ b/views/add_contact.erb
@@ -1,12 +1,12 @@
 <div id="container">
 
-	<h2>Please add a contact below: </h2>
+	<h2 id="add_header">Please add a contact below: </h2>
 
-<form action= "/contacts" method="post" > 
+<form action= "/contacts" method="post" id="add_contact"> 
 
-		<input type="text" name="first_name" placeholder="First Name" required>
-		<input type="text" name="last_name"  placeholder="Last Name" required>
-		<input type="email" name ="email"  placeholder="Email">
+		<input type="text" name="first_name" placeholder="First Name" id="First Name" required> 
+		<input type="text" name="last_name"  placeholder="Last Name" id="Last Name" required> 
+	  <input type="email" name ="email"  id = "Email" placeholder="Email" required> 
 		<input type="text" name="note" placeholder="Note" required>
 
 
