--- a/views/edit_specific_contact.erb
+++ b/views/edit_specific_contact.erb
@@ -1,4 +1,4 @@
-<h2>Please edit a new contact below</h2>
+<h2>Please edit a contact below</h2>
 
 <form action="/contacts/<%= @display_contact.id %>" method="post"> 
 	<input type="hidden" name="_method" value="put">
