System fully operational, added links to contact cards, added edit button to individual contact view

--- a/public/style.css
+++ b/public/style.css
@@ -55,11 +55,6 @@ input, button {
 	border: 2px solid gray;
 }
 
-button:hover {
-	opacity: .7;
-	background-color: #ecf0f1;
-}
-
 input:focus, button:focus{
 	border: 4px solid lightblue;
 }
@@ -73,7 +68,7 @@ input:hover, button:hover {
 	margin: auto;
 }
 
-a {
+nav a {
 	color: white;
 	opacity: .7;
 	text-decoration: none;
@@ -136,7 +131,7 @@ ul {
 	-webkit-margin-after: 0em;
 }
 
-#delete:hover {
+.hover:hover {
 	opacity: .7;
 	background-color: #ecf0f1;
 	cursor: pointer;
