--- a/views/add_contact.erb
+++ b/views/add_contact.erb
@@ -10,7 +10,7 @@
 		<input type="text" name="note" placeholder="Note" required>
 
 
-	<button type="submit">Submit</button>
+	<button type="submit" class="hover">Submit</button>
 
 	</form>
 </div>
