--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,17 +1,22 @@
 <h2>All Contacts</h2>
 
-<% number = @@rolodex.counter > 1 ? "contacts" : "contact" %>
-<h2>You have <%= "#{@@rolodex.counter} #{number}" %>.</h2>
 
+<% num = @@rolodex.counter %>
+<% if num == 1 then number = "contact" %>
+<% else number = "contacts" %>
+<% end %>
+
+<h2>You have <%= "#{@@rolodex.counter} #{number}" %>.</h2>
 
 <ul class="contacts-list">
 	<% @@rolodex.contacts.each do |contact| %>
-		<li class="contactcards">
-			<div></div>
+		<a href="/contacts/<%= contact.id %>">
+			<li class="contactcards"> 
 			<%= contact.first_name %> <%= contact.last_name %> <hr> 
 			<%= contact.email %> <br> 
 			Note: <%= contact.note %> <br> 
 			ID: <%= contact.id %>
 		</li>
+		</a>
 	<% end %>
 </ul>
