--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>Rolo</title>
+		<title>Rollo</title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
 		<link rel="shortcut icon" href="/favicon.ico">
 	
