--- a/views/contact.erb
+++ b/views/contact.erb
@@ -6,5 +6,9 @@
 
 <form action="/contacts/<%= @display_contact.id %>" method="post">
 	<input type="hidden" name="_method" value="delete">
-	<input type="submit" name="Delete Contact" value="Delete Contact" id="delete">
+	<input type="submit" name="Delete Contact" value="Delete Contact" class="hover">
+</form>
+
+<form action="/contacts/<%= @display_contact.id %>/edit" method="get"> 
+	<input type="submit" name="Edit Contact" value="Edit Contact" class="hover">
 </form>
