--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<!-- define layout to be applied to pages, before the yield is executed and code in 
+different views is applied to body -->
+<!DOCTYPE html> 
 <html>
 
 	<head>
